fixed stocks, added spacing between widgets

--- a/hci-project1/hci_project1/style.css
+++ b/hci-project1/hci_project1/style.css
@@ -1,3 +1,4 @@
+
 .graphWidButton {
     background-image: linear-gradient(135deg, #B5B5B5 0%, #D1D1D1 60%, #EDEDED 100%);
     border-radius: 20%;
@@ -14,7 +15,7 @@
 }
 
 .graphWidButtonYellow {
-    background-image: linear-gradient(135deg, #FFFFFF 0%, #FFCC33 60%, #FFFFFF 100%);
+    background-image: linear-gradient(135deg, #FFFFFF 0%, #FFFFC3 60%, #FFFFFF 100%);
     border-radius: 20%;
     cursor:pointer;
     border:1px;
@@ -27,6 +28,7 @@
     background-color:light-gray;
     font-size: 20px;
 }
+
 
 /* need to copy this slow-spin class*/
 .slow-spin {
